<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:colopl="http://schemas.android.com/apk/res/REMOVED_APPID" xmlns:android="http://schemas.android.com/apk/res/android" xmlns:card_view="http://schemas.android.com/apk/res-auto" xmlns:ads="http://schemas.android.com/apk/lib/com.google.ads" android:orientation="horizontal" android:id="@+id/net_gogame_gowrap_back_support_buttons" android:layout_width="wrap_content" android:layout_height="wrap_content">
    <net.gogame.gowrap.ui.v2017_1.SupportCustomImageButton android:id="@+id/net_gogame_gowrap_support_form_button" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_weight="1" card_view:image="@drawable/net_gogame_gowrap_icon_support_form" card_view:level="4" card_view:caption="@string/net_gogame_gowrap_support_form_button_caption" card_view:subcaption="@string/net_gogame_gowrap_support_form_button_subcaption"/>
    <net.gogame.gowrap.ui.v2017_1.SupportCustomImageButton android:id="@+id/net_gogame_gowrap_support_chat_button" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="8dp" android:layout_weight="1" card_view:image="@drawable/net_gogame_gowrap_icon_support_chat" card_view:level="5" card_view:caption="@string/net_gogame_gowrap_support_chat_button_caption" card_view:subcaption="@string/net_gogame_gowrap_support_chat_button_subcaption"/>
</LinearLayout>
