<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:colopl="http://schemas.android.com/apk/res/REMOVED_APPID" xmlns:android="http://schemas.android.com/apk/res/android" xmlns:card_view="http://schemas.android.com/apk/res-auto" xmlns:ads="http://schemas.android.com/apk/lib/com.google.ads" android:orientation="vertical" android:layout_width="match_parent" android:layout_height="match_parent">
    <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="match_parent">
        <LinearLayout android:layout_gravity="center_vertical" android:id="@+id/net_gogame_gowrap_navbar" android:layout_width="match_parent" android:layout_height="wrap_content" style="@style/net_gogame_gowrap_navbar">
            <LinearLayout android:layout_gravity="center_vertical" android:orientation="horizontal" android:background="@android:color/transparent" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_weight="1">
                <ImageView android:layout_gravity="center_vertical" android:id="@+id/net_gogame_gowrap_back_button" android:padding="@dimen/net_gogame_gowrap_navbar_button_padding" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/net_gogame_gowrap_icon_back" android:contentDescription="@string/net_gogame_gowrap_back_button_content_description"/>
                <ImageView android:layout_gravity="center_vertical" android:id="@+id/net_gogame_gowrap_info_button" android:padding="@dimen/net_gogame_gowrap_navbar_button_padding" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/net_gogame_gowrap_icon_info" android:contentDescription="@string/net_gogame_gowrap_info_button_content_description"/>
                <ImageView android:layout_gravity="center_vertical" android:id="@+id/net_gogame_gowrap_language_button" android:padding="@dimen/net_gogame_gowrap_navbar_button_padding" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/net_gogame_gowrap_icon_language" android:contentDescription="@string/net_gogame_gowrap_language_button_content_description"/>
                <ImageView android:layout_gravity="center_vertical" android:id="@+id/net_gogame_gowrap_community_button" android:padding="@dimen/net_gogame_gowrap_navbar_button_padding" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/net_gogame_gowrap_icon_social" android:contentDescription="@string/net_gogame_gowrap_community_button_content_description"/>
                <ImageView android:layout_gravity="center_vertical" android:id="@+id/net_gogame_gowrap_offers_button" android:padding="@dimen/net_gogame_gowrap_navbar_button_padding" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/net_gogame_gowrap_icon_offers" android:contentDescription="@string/net_gogame_gowrap_offers_button_content_description"/>
                <ImageView android:layout_gravity="center_vertical" android:id="@+id/net_gogame_gowrap_help_button" android:padding="@dimen/net_gogame_gowrap_navbar_button_padding" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/net_gogame_gowrap_icon_help" android:contentDescription="@string/net_gogame_gowrap_help_button_content_description"/>
                <ImageView android:layout_gravity="center_vertical" android:id="@+id/net_gogame_gowrap_contact_button" android:padding="@dimen/net_gogame_gowrap_navbar_button_padding" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/net_gogame_gowrap_icon_contact" android:contentDescription="@string/net_gogame_gowrap_contact_button_content_description"/>
                <ProgressBar android:layout_gravity="center_vertical" android:id="@+id/net_gogame_gowrap_progress_indicator" android:padding="@dimen/net_gogame_gowrap_navbar_button_padding" android:visibility="gone" android:layout_width="0dp" android:layout_height="match_parent" android:layout_weight="1" style="@style/Widget.DeviceDefault.Light.ProgressBar"/>
            </LinearLayout>
            <ImageView android:layout_gravity="center_vertical" android:id="@+id/net_gogame_gowrap_close_button" android:padding="@dimen/net_gogame_gowrap_navbar_button_padding" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/net_gogame_gowrap_icon_close" android:contentDescription="@string/net_gogame_gowrap_close_button_content_description"/>
        </LinearLayout>
        <FrameLayout android:id="@+id/net_gogame_gowrap_main_fragment_container" android:background="#2f6476" android:layout_width="match_parent" android:layout_height="match_parent"/>
    </LinearLayout>
</FrameLayout>
