<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:colopl="http://schemas.android.com/apk/res/REMOVED_APPID" xmlns:android="http://schemas.android.com/apk/res/android" xmlns:card_view="http://schemas.android.com/apk/res-auto" xmlns:ads="http://schemas.android.com/apk/lib/com.google.ads" android:layout_width="match_parent" android:layout_height="match_parent">
    <LinearLayout android:orientation="vertical" android:paddingBottom="120dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/net_gogame_gowrap_margin_left" android:layout_marginTop="@dimen/net_gogame_gowrap_margin_bottom" android:layout_marginRight="@dimen/net_gogame_gowrap_margin_right" android:layout_marginBottom="@dimen/net_gogame_gowrap_margin_top">
        <net.gogame.gowrap.ui.v2017_1.CommunityCustomImageButton android:layout_gravity="center_horizontal" android:id="@+id/net_gogame_gowrap_community_header" android:visibility="visible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="8dp" card_view:image="@drawable/net_gogame_gowrap_community_header" card_view:level="5" card_view:caption="@string/net_gogame_gowrap_community_header_subcaption"/>
        <net.gogame.gowrap.ui.layout.CustomGridLayout android:layout_gravity="center_horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="16dp" card_view:column_count="@integer/net_gogame_gowrap_community_grid_columns" card_view:horizontal_spacing="8dp" card_view:vertical_spacing="8dp">
            <net.gogame.gowrap.ui.v2017_1.CommunityCustomImageButton android:layout_gravity="center_horizontal" android:id="@+id/net_gogame_gowrap_facebook_button" android:visibility="visible" android:layout_width="wrap_content" android:layout_height="wrap_content" card_view:image="@drawable/net_gogame_gowrap_button_facebook" card_view:level="1" card_view:caption="@string/net_gogame_gowrap_community_facebook_button_subcaption"/>
            <net.gogame.gowrap.ui.v2017_1.CommunityCustomImageButton android:layout_gravity="center_horizontal" android:id="@+id/net_gogame_gowrap_twitter_button" android:visibility="visible" android:layout_width="wrap_content" android:layout_height="wrap_content" card_view:image="@drawable/net_gogame_gowrap_button_twitter" card_view:level="2" card_view:caption="@string/net_gogame_gowrap_community_twitter_button_subcaption"/>
            <net.gogame.gowrap.ui.v2017_1.CommunityCustomImageButton android:layout_gravity="center_horizontal" android:id="@+id/net_gogame_gowrap_instagram_button" android:visibility="visible" android:layout_width="wrap_content" android:layout_height="wrap_content" card_view:image="@drawable/net_gogame_gowrap_button_instagram" card_view:level="3" card_view:caption="@string/net_gogame_gowrap_community_instagram_button_subcaption"/>
            <net.gogame.gowrap.ui.v2017_1.CommunityCustomImageButton android:layout_gravity="center_horizontal" android:id="@+id/net_gogame_gowrap_youtube_button" android:visibility="visible" android:layout_width="wrap_content" android:layout_height="wrap_content" card_view:image="@drawable/net_gogame_gowrap_button_youtube" card_view:level="4" card_view:caption="@string/net_gogame_gowrap_community_youtube_button_subcaption"/>
            <net.gogame.gowrap.ui.v2017_1.CommunityCustomImageButton android:layout_gravity="center_horizontal" android:id="@+id/net_gogame_gowrap_forum_button" android:visibility="visible" android:layout_width="wrap_content" android:layout_height="wrap_content" card_view:image="@drawable/net_gogame_gowrap_button_forum" card_view:level="5" card_view:caption="@string/net_gogame_gowrap_community_forum_button_subcaption"/>
            <net.gogame.gowrap.ui.v2017_1.CommunityCustomImageButton android:layout_gravity="center_horizontal" android:id="@+id/net_gogame_gowrap_wiki_button" android:visibility="visible" android:layout_width="wrap_content" android:layout_height="wrap_content" card_view:image="@drawable/net_gogame_gowrap_button_wiki" card_view:level="6" card_view:caption="@string/net_gogame_gowrap_community_wiki_button_subcaption"/>
        </net.gogame.gowrap.ui.layout.CustomGridLayout>
    </LinearLayout>
</ScrollView>
