<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:colopl="http://schemas.android.com/apk/res/REMOVED_APPID" xmlns:android="http://schemas.android.com/apk/res/android" xmlns:card_view="http://schemas.android.com/apk/res-auto" xmlns:ads="http://schemas.android.com/apk/lib/com.google.ads" android:orientation="vertical" android:background="#ffdddddd" android:layout_width="match_parent" android:layout_height="match_parent">
    <LinearLayout android:orientation="horizontal" android:id="@+id/net_gogame_zopim_header_bar" android:background="#ff87b856" android:padding="4dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_alignParentTop="true">
        <ImageButton android:layout_gravity="center_vertical" android:id="@+id/backButton" android:background="@drawable/net_gogame_chat_back_button_icon" android:layout_width="wrap_content" android:layout_height="wrap_content" android:contentDescription="@string/net_gogame_chat_back_button_description"/>
        <TextView android:textAppearance="?android:attr/textAppearanceMedium" android:textSize="20sp" android:textColor="#ffffffff" android:gravity="center_vertical" android:layout_width="0dp" android:layout_height="match_parent" android:text="@string/net_gogame_chat_title" android:layout_weight="1"/>
        <Button android:textSize="18sp" android:textColor="@color/net_gogame_chat_outline_button" android:layout_gravity="center_vertical" android:id="@+id/switchButton" android:background="@drawable/net_gogame_chat_outline_button" android:paddingLeft="8dp" android:paddingRight="8dp" android:visibility="visible" android:layout_width="wrap_content" android:layout_height="match_parent" android:text="@string/net_gogame_chat_switch_button_description"/>
        <ImageButton android:id="@+id/closeButton" android:background="@drawable/net_gogame_chat_close_button_icon" android:visibility="visible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:contentDescription="@string/net_gogame_chat_close_button_description"/>
    </LinearLayout>
    <LinearLayout android:orientation="vertical" android:id="@+id/fragment" android:layout_width="match_parent" android:layout_height="match_parent" android:layout_below="@+id/net_gogame_zopim_header_bar"/>
    <View android:background="@drawable/net_gogame_chat_shadow" android:layout_width="match_parent" android:layout_height="6dp" android:layout_below="@+id/net_gogame_zopim_header_bar"/>
</RelativeLayout>
