<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:colopl="http://schemas.android.com/apk/res/REMOVED_APPID" xmlns:android="http://schemas.android.com/apk/res/android" xmlns:card_view="http://schemas.android.com/apk/res-auto" xmlns:ads="http://schemas.android.com/apk/lib/com.google.ads" android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content">
    <ImageView android:background="@drawable/net_gogame_gowrap_dpro_tips3_icon" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="8dp"/>
    <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="8dp">
        <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content">
            <TextView android:textSize="18sp" android:textStyle="bold" android:textColor="@android:color/white" android:ellipsize="end" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="8dp" android:text="@string/net_gogame_gowrap_tips_article3_title" android:maxLines="2"/>
            <TextView android:textSize="14sp" android:textColor="@android:color/white" android:ellipsize="end" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="8dp" android:text="@string/net_gogame_gowrap_tips_article3_description" android:maxLines="4" android:minLines="2"/>
        </LinearLayout>
        <net.gogame.gowrap.ui.view.AutoStateButton android:textSize="12sp" android:textColor="@android:color/white" android:layout_gravity="right" android:id="@+id/net_gogame_gowrap_tip3_button" android:background="@drawable/net_gogame_gowrap_default_button_background" android:layout_width="wrap_content" android:layout_height="32dp" android:text="@string/net_gogame_gowrap_tips_see_more_button_caption" android:shadowColor="@android:color/black" android:shadowDx="1.5" android:shadowDy="1.3" android:shadowRadius="1.6"/>
    </LinearLayout>
</LinearLayout>
