<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:colopl="http://schemas.android.com/apk/res/REMOVED_APPID" xmlns:android="http://schemas.android.com/apk/res/android" xmlns:card_view="http://schemas.android.com/apk/res-auto" xmlns:ads="http://schemas.android.com/apk/lib/com.google.ads" android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content">
    <TextView android:textSize="14sp" android:textColor="#ff999999" android:ellipsize="end" android:gravity="center_vertical" android:id="@+id/net_gogame_gowrap_ranking_position" android:layout_width="70dp" android:layout_height="match_parent" android:layout_margin="4dp" android:text="@string/net_gogame_gowrap_ranking_position_header_caption" android:maxLines="1" android:shadowColor="@android:color/black" android:shadowDx="1.5" android:shadowDy="1.3" android:shadowRadius="1.6"/>
    <TextView android:textSize="14sp" android:textColor="#ff999999" android:ellipsize="end" android:layout_gravity="center_vertical" android:id="@+id/net_gogame_gowrap_ranking_title" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_margin="4dp" android:text="@string/net_gogame_gowrap_ranking_player_header_caption" android:maxLines="1" android:shadowColor="@android:color/black" android:shadowDx="1.5" android:shadowDy="1.3" android:shadowRadius="1.6" android:layout_weight="1"/>
    <TextView android:textSize="14sp" android:textColor="#ff999999" android:ellipsize="end" android:gravity="right|center_vertical|center_horizontal|center" android:id="@+id/net_gogame_gowrap_ranking_level" android:layout_width="40dp" android:layout_height="match_parent" android:layout_margin="4dp" android:text="@string/net_gogame_gowrap_ranking_level_header_caption" android:maxLines="1" android:shadowColor="@android:color/black" android:shadowDx="1.5" android:shadowDy="1.3" android:shadowRadius="1.6"/>
    <TextView android:textSize="14sp" android:textColor="#ff999999" android:ellipsize="end" android:gravity="right|center_vertical|center_horizontal|center" android:id="@+id/net_gogame_gowrap_ranking_value" android:layout_width="60dp" android:layout_height="match_parent" android:layout_margin="4dp" android:maxLines="1" android:shadowColor="@android:color/black" android:shadowDx="1.5" android:shadowDy="1.3" android:shadowRadius="1.6"/>
</LinearLayout>
